[package]
name = "goodnyte"
version = "0.1.0"
authors = ["tkyc <terrykyc.7000@gmail.com>"]
edition = "2018"



[dependencies]
lambda_runtime = "0.2.1"
serde = "1.0.113"
serde_derive = "1.0.113"
simple-error = "0.2.1"
simple_logger = "1.6.0"
log = "0.4.8"
openssl = { version = "0.10", features = ["vendored"] }
